LaserDemo/TEXT/LookAheadEx.h

//旋转轴范围设置
struct TRotationAxisRange
{
	int primaryAxisRangeOn;              //第一旋转轴限定范围是否生效，0：不生效，1：生效
	int slaveAxisRangeOn;                //第二旋转轴限定范围是否生效，0：不生效，1：生效
	double maxPrimaryAngle;              //第一旋转轴最大值
	double minPrimaryAngle;              //第一旋转轴最小值
	double maxSlaveAngle;                //第二旋转轴最大值
	double minSlaveAgnle;                //第二旋转轴最小值
};
//选解参数
enum EGroupSelect
{
	Continuous=0,
	Group_1,
	Group_2,
};
struct TPos
{
	double machinePos[LA_MACHINE_AXIS_NUM];
	double workPos[LA_WORK_AXIS_NUM];
};
//5 Axis
GT_API GT_CrdRTCPOn(short cardNum,short crd,short fifo=0);
GT_API GT_CrdRTCPOff(short cardNum,short crd,short fifo=0);
GT_API GT_UpdateMachineBuildingFile(short cardNum,short crd, int update);
GT_API GT_InitialMachineBuilding(short cardNum,short crd, char *pMachineCfgFileName,double *machineCoordCenter, double *workCoordCenter, double toolLength);
GT_API GT_SetRotationAxisRange(short cardNum,short crd, TRotationAxisRange *pRotationAxisRange);
GT_API GT_SetInverseSolutionSelectPara(short cardNum,short crd, EGroupSelect groupSelect, int priorAxisSet);
GT_API GT_MachineForwardTrans(short cardNum,short crd, double *pMachinePos, double *pWorkPos);
GT_API GT_MachineRTCPTrans(short cardNum,short crd, double *pInputPos, double *pMachinePos, double *pWorkPos);
GT_API GT_MachineTransformation(short cardNum,short crd, int posType, double *pPrePos, double *pPos, int *pPosNum, TPos **pReturnPos);
GT_API GT_SetCompToolLength(short cardNum,short crd, double compToolLength);
GT_API GT_SetCompWorkCoordOffset(short cardNum,short crd, double *pCompWorkOffset);
GT_API GT_SetNonlinearErrorControl(short cardNum,short crd, int enable, double nonlinearError);
GT_API GT_EnableDiscreateArc(short cardNum,short crd,short enable,double arcError);
GT_API GT_StartXYCMachineMode(short cardNum,short crd, short dir, double contactAngle, double rotationAngle, double *pTranslation, double aValue,short fifo);//启动XYC模式
GT_API GT_EndXYCMachineMode(short cardNum,short crd,short fifo);                                                   //退出XYC模式
GT_API GT_SetWorkCrdPlane(short cardNum,short crd, short enable, double *pNormVector, double *pPoint,short fifo);    //设置玻璃加工平面参数
GT_API GT_SetStartPointProcessMode(short cardNum,short crd, short enable, double z,short fifo);                      //预处理第一段xyc数据
GT_API GT_InitialMachineBuildingEx(short cardNum,short crd, char *pMachineCfgFileName,double *machineCoordCenter, double *workCoordCenter, double toolLength);
GT_API GT_SetWorkCrdLaserFollowMode(short cardNum,short crd,short enbale,short fifo,short chn);
GT_API GT_ArcXYRACEx(short cardNum,short crd,double x,double y,double a,double c,double radius,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcXYCACEx(short cardNum,short crd,double x,double y,double a,double c,double xCenter,double yCenter,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcXYZACEx(short cardNum,short crd,double x,double y,double z,double a,double c,double interX,double interY,double interZ,double interA,double interC,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcYZRACEx(short cardNum,short crd,double y,double z,double a,double c,double radius,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcYZCACEx(short cardNum,short crd,double y,double z,double a,double c,double yCenter,double zCenter,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcZXRACEx(short cardNum,short crd,double z,double x,double a,double c,double radius,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);
GT_API GT_ArcZXCACEx(short cardNum,short crd,double z,double x,double a,double c,double zCenter,double xCenter,short circleDir,double synVel,double synAcc,long segNum,short override2,short fifo);