GSN_PVT_CSharp/GTN_Crd_Domo_CSharp/LookAheadEx.cs


        //5 Axis
        [DllImport("gts.dll")]
        public static extern short  GT_CrdRTCPOn(short crd,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_CrdRTCPOff(short crd,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_UpdateMachineBuildingFile(short crd, int update);
        [DllImport("gts.dll")]
        public static extern short  GT_InitialMachineBuilding(short crd, string pMachineCfgFileName,ref double machineCoordCenter, ref double workCoordCenter, double toolLength);
        [DllImport("gts.dll")]
        public static extern short  GT_SetRotationAxisRange(short crd, ref TRotationAxisRange pRotationAxisRange);
        [DllImport("gts.dll")]
        public static extern short  GT_SetInverseSolutionSelectPara(short crd, EGroupSelect groupSelect, int priorAxisSet);
        [DllImport("gts.dll")]
        public static extern short  GT_MachineForwardTrans(short crd, ref double pMachinePos, out double pWorkPos);
        [DllImport("gts.dll")]
        public static extern short  GT_MachineRTCPTrans(short crd, ref double pInputPos, ref double pMachinePos, ref double pWorkPos);
        [DllImport("gts.dll")]
        public static extern short  GT_MachineTransformation(short crd, int posType, ref double pPrePos, ref double pPos, ref int pPosNum, ref TPos pReturnPos);
        [DllImport("gts.dll")]
        public static extern short  GT_SetCompToolLength(short crd, double compToolLength);
        [DllImport("gts.dll")]
        public static extern short  GT_SetCompWorkCoordOffset(short crd, ref double pCompWorkOffset);
        [DllImport("gts.dll")]
        public static extern short  GT_SetNonlinearErrorControl(short crd, int enable, double nonlinearError);
        [DllImport("gts.dll")]
        public static extern short  GT_EnableDiscreateArc(short crd,short enable,double arcError);
        [DllImport("gts.dll")]
        public static extern short  GT_StartXYCMachineMode(short crd, short dir, double contactAngle, double rotationAngle, ref double pTranslation, double aValue,short fifo);//启动XYC模式
        [DllImport("gts.dll")]
        public static extern short  GT_EndXYCMachineMode(short crd,short fifo);                                                   //退出XYC模式
        [DllImport("gts.dll")]
        public static extern short  GT_SetWorkCrdPlane(short crd, short enable, ref double pNormVector, ref double pPoint,short fifo);    //设置玻璃加工平面参数
        [DllImport("gts.dll")]
        public static extern short  GT_SetStartPointProcessMode(short crd, short enable, double z,short fifo);                      //预处理第一段xyc数据
        [DllImport("gts.dll")]
        public static extern short  GT_InitialMachineBuildingEx(short crd, string pMachineCfgFileName,ref double machineCoordCenter, ref double workCoordCenter, double toolLength);
        [DllImport("gts.dll")]
        public static extern short  GT_SetWorkCrdLaserFollowMode(short crd,short enbale,short fifo,short chn);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYRACEx(short crd,double x,double y,double a,double c,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYCACEx(short crd,double x,double y,double a,double c,double xCenter,double yCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYZACEx(short crd,double x,double y,double z,double a,double c,double interX,double interY,double interZ,double interA,double interC,double synVel,double synAcc,int segNum,short override2,short fifo);
				[DllImport("gts.dll")]
				public static extern short GT_ArcZXRACEx(short crd,double z,double x,double a,double c,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
				[DllImport("gts.dll")]
				public static extern short GT_ArcYZRACEx(short crd,double y,double z,double a,double c,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
				[DllImport("gts.dll")]
				public static extern short GT_ArcYZCACEx(short crd,double y,double z,double a,double c,double yCenter,double zCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
				[DllImport("gts.dll")]
				public static extern short GT_ArcZXCACEx(short crd,double z,double x,double a,double c,double zCenter,double xCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
	}
}
